...
) {
    var expanded by remember { mutableStateOf(false) }

    ExposedDropdownMenuBox(
        expanded = expanded,
        onExpandedChange = { if (enabled) expanded = !expanded },
        modifier = Modifier.testTag("choose_language")
    ) {
        OutlinedTextField(
            value = getLanguageDisplayText(selected),
            onValueChange = {},
            readOnly = true,
            label = { Text(stringResource(Res.string.choose_language)) },
...
