...
                        .padding(top = 4.dp),
                    verticalArrangement = Arrangement.spacedBy(4.dp)
                ) {
                    Text(
                        text = lessonDetail?.metadata?.title?.let { langMapString(it) } ?: "",
                        style = MaterialTheme.typography.titleLarge,
                        modifier = Modifier.testTag("publication_title"),
                    )

                    uiState.appDetail.dataOrNull()?.also { app ->
                        Row(
                            verticalAlignment = Alignment.CenterVertically,
                            modifier = Modifier.clickable { onClickApp(app) }
...
