appId: world.respect.app
onFlowStart:
  - clearState: world.respect.app
  - runScript:
      file: "../scripts/school_init.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
        SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
        DIR_ADMIN_AUTH_HEADER: ${DIR_ADMIN_AUTH_HEADER}
        SCHOOL_URL: ${SCHOOL_URL}
        SCHOOL_NAME: ${SCHOOL_NAME}
        URL_SUBSTITUTION: ${URL_SUBSTITUTION}
        NAME: "001_001_invite_users_using_qr_code_or_link_test"

onFlowComplete:
  - runFlow:
      file: "../subflows/teardown.yaml"
      env:
        NAME: "db-final"
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
# Invite new user:
- runFlow: "../subflows/school_admin_login_flow.yaml"
- tapOn:
    id: "floating_action_button"
- tapOn: "Add from Link"
- assertVisible: "Enter link"
- tapOn: "Link*"
- inputText: ${output.TEST_APP_URL}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "App detail"
#- assertVisible: "Example Web App"
- assertVisible: "Add to school apps"
# verify App got added to Apps section
- tapOn: "Add to school apps"
- tapOn:
    id: "nav_home"
- assertVisible:
    id: "app_title"
    text: "Home"
- runScript:
    file: "../scripts/lessons.js"
- tapOn: ${output.onlineApp1}
- tapOn: ${output.onlineGrade1}
- tapOn: ${output.onlineSubLesson1}
- tapOn: ${output.onlineLesson1}
- tapOn: "Open"

- extendedWaitUntil:
    visible:
        id: "publication_title"
    timeout: 10000




