appId: world.respect.app

---
- tapOn: "People"
- assertVisible:
      id: "app_title"
      text: "People"
- tapOn:
      id: "ExpandableFab"   #  +Person button
- tapOn: "Add new person"
- assertVisible:
      id: "app_title"
      text: "Add person"
- tapOn: "First names*"
- inputText: ${FIRSTNAME}
- tapOn: "Last name*"
- inputText: ${LASTNAME}
- tapOn: "Gender*"
- tapOn: ${GENDER}
- tapOn:
      id: "role"
- tapOn: ${ROLE}
- tapOn: "Save"
- assertVisible:
      id: "app_title"
      text: ${FIRSTNAME} ${LASTNAME}
- tapOn: "Create account"
- assertVisible:
        id: "app_title"
        text: "Create account"
- assertVisible:
        id: "Username"
        text: ${USERNAME}
- runFlow:
    when:
      notVisible: "Set password"
    commands:
      - tapOn: "Password"
      - inputText: ${PASSWORD}
      - tapOn: "Save"
      - assertVisible: "Manage account"
- runFlow:
        when:
              visible: "Set password"
        commands:
              - tapOn: "Set password"
              - tapOn: "Password*"
              - inputText: ${PASSWORD}
              - tapOn: "Save"
              - assertVisible:
                      id: "password_change_btn"  # Change password button
- back